2015-03-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller): Do not set the modified flag when
	an external spell checker didn't make any changes.  This fixes
	Savannah bug #44320, reported by Cody A. Taylor.

2015-03-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter): Fix a message plus a few comments.

2015-03-14  Mark Majeres  <mark@engine12.com>
	* src/nano.c (renumber): Get out if there is nothing to renumber,
	to prevent do_undo() from falling over trying to renumber emptiness.
	This fixes Savannah bug #44488, reported by Dennis Decker Jensen.

2015-03-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h, src/nano.c: Fix compilation with --enable-tiny plus
	--enable-nanorc.
	* src/rcfile.c (parse_binding): Fix the rebinding of toggles.
	* doc/man/{nano.1,rnano.1,nanorc.5}, doc/texinfo/nano.texi: Update
	years and version numbers in the docs in anticipation of a release.
	* src/nano.c (version): Drop compile time from version information
	to enable a reproducible build.  Proposed by Jérémy Bobbio and Jordi
	Mallach (https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=774388).

2015-03-07  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Add a note about the
	inherent imperfection of using regular expressions for syntax
	highlighting, as suggested by Mike Frysinger in bug #30962.
	* doc/man/nanorc.5: Improve the indentation of some lists.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Remove the mistaken
	square brackets around the arguments of "header" and "magic" --
	those arguments are not optional.  Also add "formatter" to the
	texinfo document, and slightly improve its punctuation.

GNU nano 2.3.99pre2 - 2015.02.27
2015-02-25  Chris Allegretta <chrisa@asty.org>
	* src/rcfile.c (parse_binding): Add an exception for do_toggle() as
	rebinding toggles broke with r5022.  (Fixed in r5134.)

2015-02-21  Benno Schulenberg  <bensberg@justemail.net>